--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,8 @@ galaxy_info:
   min_ansible_version: '2.0.0'
   platforms:
     - name: ArchLinux
+      versions:
+        - all
     - name: Debian
       versions:
         - all
