--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,9 +4,10 @@ dependencies: []
 
 galaxy_info:
   role_name: ntp
-  author: 'Adfinis SyGroup AG'
+  namespace: thunderbluff
+  author: 'Marc Urben'
   description: 'Install and manage ntp'
-  company: 'Adfinis SyGroup AG'
+  company: Thunderbluff
   license: 'GNU General Public License v3'
   min_ansible_version: '2.0.0'
   platforms:
