--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: include os specific vars
+- name: Include os specific vars
   ansible.builtin.include_vars: '{{ item }}'
   with_first_found:
     - files:
