--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -1,10 +1,9 @@
 ---
-
 - name: Install ntp related packages
   ansible.builtin.package:
-    name: '{{ item }}'
+    name: "{{ item }}"
     state: present
   tags:
-    - 'role::ntp'
-    - 'role::ntp:install'
-  loop: '{{ ntp_packages }}'
+    - "role::ntp"
+    - "role::ntp:install"
+  loop: "{{ ntp_packages }}"
