--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
-
 # Internal DNS server
 ntp_servers:
-  - "opnsense.{{ basic.local_domain }}"
+  - server 0.us.pool.ntp.org
+  - server 1.us.pool.ntp.org
+  - server 2.us.pool.ntp.org
+  - server 3.us.pool.ntp.org
