--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,6 @@
 ---
-
 - name: Restart ntpd
   ansible.builtin.service:
-    name: '{{ ntp_service }}'
+    name: "{{ ntp_service }}"
     state: restarted
   ignore_errors: "{{ ansible_check_mode }}"
