--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,15 +1,14 @@
 ---
-
 dependencies: []
 
 galaxy_info:
   role_name: ntp
   namespace: thunderbluff
-  author: 'Marc Urben'
-  description: 'Install and manage ntp'
+  author: "Marc Urben"
+  description: "Install and manage ntp"
   company: Thunderbluff
-  license: 'GNU General Public License v3'
-  min_ansible_version: '2.0.0'
+  license: "GNU General Public License v3"
+  min_ansible_version: "2.0.0"
   platforms:
     - name: ArchLinux
       versions:
