--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,15 @@
 ---
-
 - name: Include os specific vars
-  ansible.builtin.include_vars: '{{ item }}'
+  ansible.builtin.include_vars: "{{ item }}"
   with_first_found:
     - files:
-        - '{{ ansible_distribution }}_{{ ansible_distribution_major_version }}.yml'
-        - '{{ ansible_os_family }}.yml'
+        - "{{ ansible_distribution }}_{{ ansible_distribution_major_version }}.yml"
+        - "{{ ansible_os_family }}.yml"
       skip: true
   tags:
-    - 'role::ntp'
-    - 'role::ntp:install'
-    - 'role::ntp:config'
+    - "role::ntp"
+    - "role::ntp:install"
+    - "role::ntp:config"
 
 - name: Importing tasks from installation.yml
   ansible.builtin.import_tasks: installation.yml
