--- a/meta/main.yml
+++ b/meta/main.yml
@@ -19,7 +19,7 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - all
-    - name: CentOS
+    - name: RedHat
       versions:
         - all
   galaxy_tags:
